# o-jepa

./: .gitignore  CLAUDEmd  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  luma.yaml  production_trial.yaml  tiny.yaml
examples/: trial_luma.py
scripts/: test_qwen_inference.py  train.py
src/: __init__.py  backbone.py  byte_encoder.py  config.py  language_interface.py  loss.py  masking.py  model.py  predictor.py  progress.py  train.py  transformer_block.py
src/data/: __init__.py  byte_dataset.py  collator.py  luma_dataset.py  transforms.py  video_dataset.py
src/data/formats/: __init__.py  base.py  ego_exo4d.py  generic.py
src/decoders/: __init__.py  audio_decoder.py  base.py  image_decoder.py  text_decoder.py
src/layers/: __init__.py  attention.py  feedforward.py  normalization.py  positional.py
tests/: __init__.py  conftest.py  test_backbone.py  test_byte_encoder.py  test_data.py  test_hierarchical.py  test_language_interface.py  test_layers.py  test_loss.py  test_luma_dataset.py  test_masking.py  test_model.py  test_predictor.py  test_training.py  test_transformer_block.py  test_transforms.py  test_video_dataset.py
