[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "o-jepa"
version = "0.5.0"
description = "Omni-modality Joint Embedding Predictive Architecture - A byte-level world model"
readme = "README.md"
license = {text = "MIT OR Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "O-JEPA Team"}
]
keywords = [
    "deep-learning",
    "world-model",
    "jepa",
    "self-supervised-learning",
    "multimodal",
    "byte-level",
    "pytorch",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
full = [
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
    "pillow>=10.0.0",
    "soundfile>=0.12.0",
    "decord>=0.6.0",
    "av>=10.0.0",
    "rich>=13.0.0",
    "datasets>=2.14.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
qwen = [
    "transformers>=4.40.0",
    "accelerate>=1.0.0",
    "bitsandbytes>=0.41.0",
]

[project.urls]
Homepage = "https://github.com/o-jepa/o-jepa"
Documentation = "https://github.com/o-jepa/o-jepa#readme"
Repository = "https://github.com/o-jepa/o-jepa"
Issues = "https://github.com/o-jepa/o-jepa/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | __pycache__
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".git", "__pycache__", "build", "dist"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
